@@ -4,3 +4,5 @@
 
 GTK_TYPE_PACK_DIRECTION			GtkPackDirection	GEnum		Gtk2::PackDirection
 GTK_TYPE_ICON_VIEW_DROP_POSITION	GtkIconViewDropPosition	GEnum	Gtk2::IconView::DropPosition
+
+GDK_TYPE_PIXBUF_SIMPLE_ANIM		GdkPixbufSimpleAnim	GObject	Gtk2::Gdk::PixbufSimpleAnim
