@@ -1,0 +1,1 @@
+xs/GdkPixbufSimpleAnim.xs
